--- a/index.html
+++ b/index.html
@@ -125,7 +125,8 @@
                 (개인정보 처리방침)
             </a>
             <a class="btn-link secondary" href="account-deletion.html">
-                Hero Hunmin: Account Deletion Policy
+                Hero Hunmin: Account Deletion Policy<br/>
+                (계정 삭제 방법)
             </a>
         </div>
 
