--- a/index.html
+++ b/index.html
@@ -63,6 +63,7 @@
         color: var(--text-dim);
         text-transform: uppercase;
         letter-spacing: 0.08em;
+        text-align: left;
     }
 
     .link-list {
@@ -86,6 +87,7 @@
         transition: all 0.15s ease;
         border: 0;
         cursor: pointer;
+        word-break: keep-all;
     }
 
     .btn-link.secondary {
@@ -103,11 +105,32 @@
         box-shadow: 0 18px 40px rgba(0,0,0,0.6);
     }
 
+    /* 비디오 박스 */
+    .video-wrapper {
+        position: relative;
+        width: 100%;
+        border-radius: var(--radius);
+        overflow: hidden;
+        box-shadow: 0 20px 50px rgba(0,0,0,0.6);
+        background-color: #000;
+        aspect-ratio: 16 / 9;
+        border: 1px solid rgba(255,255,255,0.07);
+    }
+
+    .video-wrapper iframe {
+        position: absolute;
+        inset: 0;
+        width: 100%;
+        height: 100%;
+        border: 0;
+    }
+
     footer {
         margin-top: 28px;
         font-size: 0.7rem;
         line-height: 1.4;
         color: var(--text-dim);
+        text-align: center;
     }
 </style>
 </head>
@@ -118,6 +141,7 @@
             Hero Hunmin: Roguelike Learning Game
         </p>
 
+        <!-- 문서 섹션 -->
         <div class="section-label">Documents</div>
         <div class="link-list">
             <a class="btn-link" href="privacy.html">
@@ -128,6 +152,17 @@
                 Hero Hunmin: Account Deletion Policy<br/>
                 (계정 삭제 안내)
             </a>
+        </div>
+
+        <!-- 비디오 섹션 -->
+        <div class="section-label">Video</div>
+        <div class="video-wrapper">
+            <iframe
+                src="https://www.youtube.com/embed/SgGiZ_Mvy44"
+                title="YouTube video player"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture;"
+                allowfullscreen
+            ></iframe>
         </div>
 
         <footer>
