--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <title>Fun And Study</title>
 <style>
     :root {
-        --bg-color: #0f172a;      /* 아주 진한 남색 */
+        --bg-color: #0f172a;      /* 아주 진한 남색 배경 */
         --card-color: #1e293b;    /* 다크 카드 */
         --text-main: #ffffff;
         --text-dim: #94a3b8;
@@ -39,20 +39,40 @@
         border: 1px solid rgba(255,255,255,0.05);
     }
 
-    h1 {
-        font-size: 1.4rem;
-        font-weight: 600;
-        margin: 0;
-        color: var(--text-main);
-        letter-spacing: -0.03em;
+    /* 아이콘 스타일 */
+    .app-icon-wrapper {
+        display: flex;
+        justify-content: center;
+        margin-bottom: 16px;
     }
 
-    .subtitle {
-        margin-top: 8px;
-        font-size: 0.95rem;
-        font-weight: 400;
-        line-height: 1.4;
+    .app-icon {
+        width: 96px;
+        height: 96px;
+        border-radius: 20px;
+        box-shadow: 0 20px 40px rgba(0,0,0,0.7);
+        border: 1px solid rgba(255,255,255,0.08);
+        object-fit: cover;
+        background-color: #000;
+    }
+
+    h1 {
+        font-size: 1rem;
+        font-weight: 600;
+        margin: 0;
         color: var(--text-dim);
+        letter-spacing: -0.02em;
+        line-height: 1.4;
+    }
+
+    .title-main {
+        font-size: 1.2rem;
+        font-weight: 600;
+        margin-top: 4px;
+        margin-bottom: 0;
+        color: var(--text-main);
+        letter-spacing: -0.03em;
+        line-height: 1.4;
     }
 
     .section-label {
@@ -66,9 +86,12 @@
         text-align: left;
     }
 
+    /* 버튼 리스트를 세로 정렬하고 전체 폭에 맞추기 */
     .link-list {
-        display: grid;
+        display: flex;
+        flex-direction: column;
         gap: 12px;
+        width: 100%;
     }
 
     .btn-link {
@@ -82,8 +105,8 @@
         font-weight: 600;
         padding: 14px 16px;
         border-radius: var(--radius);
-        line-height: 1.2;
-        box-shadow: 0 14px 30px rgba(79,70,229,0.4);
+        line-height: 1.3;
+        box-shadow: 0 16px 36px rgba(79,70,229,0.5);
         transition: all 0.15s ease;
         border: 0;
         cursor: pointer;
@@ -92,17 +115,18 @@
 
     .btn-link.secondary {
         background-color: #334155;
-        box-shadow: 0 14px 30px rgba(0,0,0,0.5);
+        color: #fff;
+        box-shadow: 0 16px 36px rgba(0,0,0,0.7);
     }
 
     .btn-link:hover {
         background-color: var(--accent-hover);
-        box-shadow: 0 18px 40px rgba(99,102,241,0.5);
+        box-shadow: 0 20px 44px rgba(99,102,241,0.6);
     }
 
     .btn-link.secondary:hover {
         background-color: #475569;
-        box-shadow: 0 18px 40px rgba(0,0,0,0.6);
+        box-shadow: 0 20px 44px rgba(0,0,0,0.8);
     }
 
     /* 비디오 박스 */
@@ -136,9 +160,20 @@
 </head>
 <body>
     <main class="container">
+
+        <!-- 앱 아이콘 -->
+        <div class="app-icon-wrapper">
+            <img
+                class="app-icon"
+                src="Hero Hunmin - English Icon.png"
+                alt="Hero Hunmin App Icon"
+            />
+        </div>
+
+        <!-- 스튜디오명 / 게임명 -->
         <h1>Fun And Study</h1>
-        <p class="subtitle">
-            Hero Hunmin: Roguelike Learning Game
+        <p class="title-main">
+            Hero Hunmin: Roguelike Learning English Game
         </p>
 
         <!-- 문서 섹션 -->
