--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
     }
 
     .page-wrap {
-        width: 100%;
-        max-width: 480px;
+        width: 100%
+        ;max-width: 480px;
         display: flex;
         flex-direction: column;
         gap: 24px;
@@ -333,7 +333,6 @@
         line-height: 1.4;
         margin-top: 8px;
     }
-
 </style>
 </head>
 <body>
@@ -419,6 +418,20 @@
 
         <div class="footer-note">
             Tap an image to enlarge.
+        </div>
+    </section>
+
+    <!-- Customer Support -->
+    <section class="actions-panel">
+        <div class="actions-title">Customer Support / 고객지원</div>
+        <div class="btn-list">
+            <a class="link-btn" href="mailto:meteor666a@gmail.com?subject=Hero%20Hunmin%20Support&body=Please%20describe%20your%20issue%20(or%20feedback)%20in%20English%20or%20Korean.">
+                <div class="main-line">Contact Us: meteor666a@gmail.com</div>
+                <div class="sub-line">고객지원 문의 이메일 (클릭하여 메일 보내기)</div>
+            </a>
+        </div>
+        <div class="footer-note">
+            We aim to respond as soon as possible. 가능한 빠르게 답변드릴게요.
         </div>
     </section>
 
